<resources>
    <string name="app_name">Transportr</string>
    <string name="phone_textview">Please enter your phone number to login or create account</string>
    <string name="phone_num_hint">Phone number</string>
    <string name="country_code_hint">Country Code</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_prompt_tv">Enter One Time Password</string>
    <string name="otp_info_tv">One Time Password (OTP) has been sent to your phone number. Please enter the same here to login.</string>
    <string name="otp_continue_text">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="continue_login_text"><![CDATA[Continue & Login]]></string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="google_maps_key">AIzaSyAHax_hn4TBnwe1TBKyv0cDH0_ApKGinSQ</string>

    <!-- regex -->
    <!--<string name="letters_only">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>-->
    <string name="letters_only"></string>
    <string name="email_only">abcdefghijklmnopqrstuvwxyzzABCDEFGHIJKLMNOPQRSTUVWXYZ.0123456789@</string>
    <string name="password_only">abcdefghijklmnopqrstuvwxyzzABCDEFGHIJKLMNOPQRSTUVWXYZ._0123456789</string>

    <!-- Other Strings -->
    <string name="add_payment_btn_txt"> + Add New Payment Method</string>
    <string name="empty_payment_tv">You Currently Have No Payment Methods Setup</string>
    <string name="refer_n_earn"><![CDATA[Refer & Earn]]></string>
    <string name="help">Help</string>
    <string name="payment_options">Payment Options</string>
    <string name="your_trips">Your Trips</string>
    <string name="priv_policy">Privacy Policy</string>
    <string name="profile_settings_txt"><![CDATA[Profile & Settings]]></string>
    <string name="book_ride_txt">Book A Ride</string>
    <string name="empty_notifs_tv">All Admin Notifications, Discounts and Coupon News Will Appear Here</string>
    <string name="notifs_txt">Notifications</string>
    <string name="change_password_hint">Change Password</string>
    <string name="saved_places">Saved Places</string>
    <string name="no_saved_places">Your Saved Places Appear Here</string>
    <string name="add_new_places"> + Add New Places</string>
    <string name="log_out">Logout</string>

    <string-array name="countries">
        <item>Philippines +63</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_trips_yet">Oops...Looks Llike You\'ve Been A Hermit</string>
    <string name="make_trip">Make Trip Now</string>
    <string name="current_trips_yet">You Have No Trips Currently. Want to Start One?</string>
    <string name="start_new_trip">Start New Trip</string>
    <string name="peso_currency">&#8369;</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="welcome_user_txt">SIGN IN</string>
    <string name="sign_in_user_txt">Use Your Credentials to Sign in to Your Account</string>
    <string name="forgot_pwd_txt">Reset Password</string>
    <string name="ride_sel_continue">Continue</string>
    <string name="choose_vehicle_type">Choose Vehicle Type</string>
    <string name="get_u_there">We Can Help You Get There</string>
    <string name="enter_pickup_location">Pickup Location</string>
    <string name="enter_drop_location">Drop Location</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="book_now_btn_txt">Book Now</string>
    <string name="estimated_pu_time">Estimated Pickup Time :</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="coupon_title_text">Enter Trip Coupon</string>
    <string name="coupon_hint">MA8NXI2L5CA</string>
    <string name="input_content">Your Trip Coupon Should be Valid</string>
    <string name="pre_fill">C4A5OU8P4ON</string>
    <string name="card_pre_fill">9090876564123897678</string>
    <string name="credit_card_hint">Enter Credit Card Number</string>
    <string name="credit_card_title_text">Credit Card Details</string>
    <string name="card_input_content">Enter Valid 16-19 Digit Credit Card Number</string>
    <string name="card_name_input_content">Enter Name as Written on Card</string>
    <string name="credit_card_name_title_text">Card Holder Name</string>
    <string name="credit_card_name_hint">Card Holder Name</string>
    <string name="card_Holder_name_pre_fill">John Doe</string>

</resources>
