<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    tools:context="com.jjoey.transportr.activities.LandingActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:progressTint="@color/colorPrimaryDark"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/taxi_img" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user_txt"
                android:textSize="30sp"
                android:textColor="@color/otp_gray"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_user_txt"
                android:textSize="20sp"
                android:textColor="@color/otp_gray"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/email_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="30"
                android:digits="@string/email_only"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"/>

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/password_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:digits="@string/password_only"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"/>

            <TextView
                android:id="@+id/resetPwdTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd_txt"
                android:textColor="@color/bluish"
                android:layout_gravity="end"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_btn_bkg"
                android:text="@string/sign_in_txt"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:padding="18dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
