<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jjoey.transportr.activities.LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/taxi_img" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/full_name_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="text|textPersonName"
                android:maxLines="1"
                android:maxLength="18"
                android:digits="@string/letters_only"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/email_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="30"
                android:digits="@string/email_only"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"/>

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/password_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:digits="@string/password_only"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"/>

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_icon_bkg"
                android:hint="@string/confirm_password_hint"
                android:gravity="center"
                android:textColorHint="@color/otp_gray"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:digits="@string/password_only"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:layout_marginTop="12dp"
                android:elevation="10dp"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/app_btn_bkg"
                android:text="@string/continue_login_text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:padding="18dp"
                android:textAllCaps="false"
                android:layout_marginTop="25dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
