<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_above="@id/vehiclesLayout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:background="@color/white"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_u_there"
                        android:textColor="@color/otp_gray"
                        android:textSize="16sp"
                        android:layout_gravity="center" />

                    <EditText
                        android:id="@+id/startLocationET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/trip_input_bkg"
                        android:hint="@string/enter_pickup_location"
                        android:inputType="text"
                        android:maxLines="2"
                        android:drawableLeft="@drawable/location_arrow"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="5dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/bluish"
                        android:layout_marginTop="5dp"/>

                    <EditText
                        android:id="@+id/dropLocationET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/trip_input_bkg"
                        android:hint="@string/enter_drop_location"
                        android:inputType="text"
                        android:maxLines="2"
                        android:drawableLeft="@drawable/location_drop"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/vehiclesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@id/rideContinueLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/choose_vehicle_type"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/vehiclesRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:minHeight="80dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rideContinueLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_sel_continue"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/otp_gray"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>