<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jjoey.transportr.activities.PaymentsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_options"
                android:textColor="@color/otp_gray"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <com.jjoey.transportr.utils.EmptyRecyclerView
        android:id="@+id/paymentsRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@id/addPaymentBtn"/>

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_payment_tv"
        android:textSize="20sp"
        android:textColor="@color/otp_gray"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/addPaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_payment_btn_txt"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</RelativeLayout>
